fix(ui): hack left sidebar on mobile

--- a/src/main/frontend/components/sidebar.css
+++ b/src/main/frontend/components/sidebar.css
@@ -324,6 +324,7 @@
 
     .left-sidebar-inner {
       transform: translate3d(0, 0, 0);
+      overflow: hidden;
     }
 
     > .shade-mask {
@@ -355,6 +356,10 @@
 
     &.is-open {
       width: var(--ls-left-sidebar-width);
+
+      .left-sidebar-inner {
+        overflow: visible;
+      }
     }
 
     > .shade-mask {
